--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <p>From home or abroad, join intimate culinary experiences led by passionate hosts and chefs that will take your breath away. If your group is made up of 2 or more, you can choose to privatize the experience for yourself and your loved ones.</p>
                     <div class="form text-center">
                         <form action="">
-                            <spannput type="text" placeholder="What are you looking for?">
+                            <input type="text" placeholder="What are you looking for?">
                             <button>Search</button>
                         </form>
                     </div>
