--- a/index.html
+++ b/index.html
@@ -10,109 +10,117 @@
 </head>
 <body>
 
-    <section id="banner">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <h1>Lib<span>Jay</span> Foods Products</h1>
-                    <p>From home or abroad, join intimate culinary experiences led by passionate hosts and chefs that will take your breath away. If your group is made up of 2 or more, you can choose to privatize the experience for yourself and your loved ones.</p>
-                    <div class="form text-center">
-                        <form action="">
-                            <input type="text" placeholder="What are you looking for?">
-                            <button>Search</button>
-                        </form>
-                    </div>
-                </div>
-            </div>
+  <body>
+    <header id="header">
+      <img src="/assets/product-landing-page-logo.png" id="header-img" alt="logo"/>
+      <nav id="nav-bar">
+        <a href="#features" class="nav-link">Features</a>
+        <a href="#howItWorks" class="nav-link">How It Works</a>
+        <a href="#pricing" class="nav-link">Pricing</a>
+      </nav>
+    </header>
+    <h1 class="entete">Handcrafted, home-made masterpieces</h1>
+    <form id="form" action="https://www.freecodecamp.com/email-submit" method="GET">
+      <input type="email" name="email" id="email" placeholder=" give us your email .." required />
+      <input type="submit" id="submit" value="Get started"/>
+    </form>
+      <section id="features">
+        <i class="fa fa-fire"></i>
+        <div class="text">
+          <h1>Premium Materials</h1>
+          <p>Our trombones use the shiniest brass which is sourced locally. This will increase the longevity of your purchase.</p>
         </div>
-    </section>
-    <section id="about">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-4">
-                    <div class="box">
-                        <span class="fa fa-rocket"></span>
-                        <h4>Return Policy</h4>
-                        <p>Money back guarantee</p>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="box">
-                        <span class="fa fa-users"></span>
-                        <h4>Free Shipping</h4>
-                        <p>On all orders over $25.00</p>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="box">
-                        <span class="fa fa-shop"></span>
-                        <h4>Store Locator</h4>
-                        <p>Find your nearest store</p>
-                    </div>
-                </div>
-            </div>
+      </section>
+        <section id="howItWorks">
+        <i class="fa fa-truck"></i>
+        <div class="text">
+          <h1>Fast Shipping</h1>
+          <p>We make sure you recieve your trombone as soon as we have finished making it. We also provide free returns if you are not satisfied.</p>
         </div>
-    </section>
-    <section id="pricing">
+      </section>
+        <section id="pricing">
+        <i class="fa fa-battery-full"></i>
+        <div class="text">
+          <h1>Quality Assurance</h1>
+          <p>For every purchase you make, we will ensure there are no damages or faults and we will check and test the pitch of your instrument.</p>
+        </div>
+      </section>
+      <div id="iframe">
+      <iframe  width="560" height="315" src="https://www.youtube.com/embed/SvtEDFzEDk0" title="YouTube video player" frameborder="0" 
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+      </iframe>
+    </div>
+        
+      <section id="formules">
         <div class="text-center">
-            <div class="container">
-                <h2>Pricing</h2>
-              <div class="row pt-4">
-                <div class="col-md-4">
-                  <div class="card mb-4 box-shadow">
-                    <div class="card-header">
-                      <h4 class="my-0 font-weight-normal">Bronze</h4>
-                    </div>
-                    <div class="card-body">
-                      <h1><b>$0 </b><small class="text-muted">/ mo</small></h1>
-                      <ul class="list-unstyled mt-3 mb-4">
-                        <li>10 groups delivery</li>
-                        <li>Shipping fee </li>
-                        <li>Email support</li>
-                        <li>Help center access</li>
-                      </ul>
-                      <button type="button" class="btn btn-lg btn-block btn-outline-info">Sign up for free</button>
-                    </div>
+          <div class="container">
+              <h2>Pricing</h2>
+            <div class="row pt-4">
+              <div class="col-md-4">
+                <div class="card mb-4 box-shadow">
+                  <div class="card-header">
+                    <h4 class="my-0 font-weight-normal">Bronze</h4>
+                  </div>
+                  <div class="card-body">
+                    <h1><b>$0 </b><small class="text-muted">/ mo</small></h1>
+                    <ul class="list-unstyled mt-3 mb-4">
+                      <li>10 groups delivery</li>
+                      <li>Shipping fee </li>
+                      <li>Email support</li>
+                      <li>Help center access</li>
+                    </ul>
+                    <button type="button" class="btn btn-lg btn-block btn-outline-info">Sign up for free</button>
                   </div>
                 </div>
-                <div class="col-md-4">
-                  <div class="card mb-4 box-shadow">
-                    <div class="card-header">
-                      <h4 class="my-0 font-weight-normal">Silver</h4>
-                    </div>
-                    <div class="card-body">
-                      <h1><b>$15 </b><small class="text-muted">/ mo</small></h1>
-                      <ul class="list-unstyled mt-3 mb-4">
-                        <li>20 groups delivery</li>
-                        <li>No Shipping fee</li>
-                        <li>Priority email support</li>
-                        <li>Help center access</li>
-                      </ul>
-                      <button type="button" class="btn btn-lg btn-block btn-primary">Get started</button>
-                    </div>
+              </div>
+              <div class="col-md-4">
+                <div class="card mb-4 box-shadow">
+                  <div class="card-header">
+                    <h4 class="my-0 font-weight-normal">Silver</h4>
+                  </div>
+                  <div class="card-body">
+                    <h1><b>$15 </b><small class="text-muted">/ mo</small></h1>
+                    <ul class="list-unstyled mt-3 mb-4">
+                      <li>20 groups delivery</li>
+                      <li>No Shipping fee</li>
+                      <li>Priority email support</li>
+                      <li>Help center access</li>
+                    </ul>
+                    <button type="button" class="btn btn-lg btn-block btn-primary">Get started</button>
                   </div>
                 </div>
-                <div class="col-md-4">
-                  <div class="card mb-4 box-shadow">
-                    <div class="card-header">
-                      <h4 class="my-0 font-weight-normal">Gold</h4>
-                    </div>
-                    <div class="card-body">
-                      <h1><b>$29 </b><small class="text-muted">/ mo</small></h1>
-                      <ul class="list-unstyled mt-3 mb-4">
-                        <li>30 groups delivery</li>
-                        <li>No Shipping fee</li>
-                        <li>Phone and email support</li>
-                        <li>Help center access</li>
-                      </ul>
-                      <button type="button" class="btn btn-lg btn-block btn-primary">Contact us</button>
-                    </div>
+              </div>
+              <div class="col-md-4">
+                <div class="card mb-4 box-shadow">
+                  <div class="card-header">
+                    <h4 class="my-0 font-weight-normal">Gold</h4>
+                  </div>
+                  <div class="card-body">
+                    <h1><b>$29 </b><small class="text-muted">/ mo</small></h1>
+                    <ul class="list-unstyled mt-3 mb-4">
+                      <li>30 groups delivery</li>
+                      <li>No Shipping fee</li>
+                      <li>Phone and email support</li>
+                      <li>Help center access</li>
+                    </ul>
+                    <button type="button" class="btn btn-lg btn-block btn-primary">Contact us</button>
                   </div>
                 </div>
               </div>
             </div>
           </div>
-    </section>
+        </div>
+      </section>
+      <footer id="footer">
+        <ul>
+          <li><a href="">Privacy</a></li>
+          <li><a href="">Terms</a></li>
+          <li><a href="">Contact</a></li>
+        </ul>
+        <p>Copyright 2016, Original Trombones</p>
+      </footer>
+
+  </body>
 
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"></script>
